--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,3 +9,9 @@ services:
         resource: '../src/Controller'
         public: true
         tags: [ 'controller.service_arguments' ]
+
+
+    # auto-register all commands as services
+    CleanupBundle\Command\:
+        resource: '../src/Command'
+        tags: [ 'console.command' ]
