--- a/config/pimcore/routing.yaml
+++ b/config/pimcore/routing.yaml
@@ -1,5 +1,5 @@
-app:
-    resource: "../../src/Controller/"
-    type:     annotation
-    options:
-        expose: true
+#app:
+#    resource: "../../src/Controller/"
+#    type:     annotation
+#    options:
+#        expose: true
