--- a/config/services/command.yaml
+++ b/config/services/command.yaml
@@ -6,6 +6,7 @@ services:
     public: false
 
   CleanupBundle\Command\AssetCleanCleanupCommand:
+    public: true
     tags:
-      - { name: console.command }
+      - { name: 'console.command' }
 
